updated requirements content

--- a/apps/login/static/login/index.css
+++ b/apps/login/static/login/index.css
@@ -17,12 +17,14 @@ display: inline-block;
 background-color: #4CAF50; /* Green */
 border: none;
 color: white;
-padding: 5px;
+padding: 7px;
 text-align: center;
 display: inline-block;
-font-size: 16px;
+font-size: 19px;
 margin: 4px 2px;
 float: right;
+border-radius: 6px;
+border: solid #a19999 1px;
 }
 a{
 background-color: #5a5a62;
@@ -39,6 +41,7 @@ display: inline-block;
 opacity: 0.8;
 text-align: center;
 border-radius: 29px;
+margin: 20px;
 }
 .regform p{
 margin: 5px;
@@ -57,6 +60,7 @@ vertical-align: top;
 opacity: 0.8;
 text-align: center;
 border-radius: 29px;
+margin:20px;
 }
 .logform p{
 margin: 5px;
