--- a/apps/rental/templates/rental/requirements.html
+++ b/apps/rental/templates/rental/requirements.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<title>Rental Requirements</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Rental Requirements</title>
 		{% load staticfiles %}
 		<!-- Bootstrap -->
 		<!-- Latest compiled and minified CSS -->
@@ -26,17 +26,32 @@
 		</div>
 		<div class="wrapper">
 			<h1>These are the requirements:</h1>
-			<h4>Renter must provide a valid drivers license</h4>
-			<p>The License may be from any state or even an international license Note: must not be expired.</p>
-			<p>A $200.00 deposit will be held at the time of rental along with the quoted price.</p>
-			<p>The renter must present a Debit Card or Credit Card in their name at the time of rental we do not take pre-paid cards, cash, or checks. If the renter is presenting a debit card a credit check will be made. If using a Credit Card no credit report is nessasary.</p>
-			<i class="fa fa-cc-visa"></i>
-			<i class="fa fa-cc-mastercard"></i>
-			<i class="fa fa-cc-amex"></i>
-			<i class="fa fa-cc-diners-club"></i>
-			<h2>Avoid Being Charged</h2>
-			<p>Absolutely no smoking in any of our vehicles as this causes us to pull the vehicle from our fleet and detail it. There is a $300.00 penalty if done.</p>
-			<p>We allow our renters to travel with their pets, however, if your pet (including service animals) leave excesive hair in our vehicle please ensure to clean up after them. There is a $300.00 charge for excessive pet hair. </p>
+			<div class="reqs">
+				<h4>Renter must provide a valid drivers license</h4>
+				<p>The License may be from any state or even an international license Note: must not be expired.</p>
+				<p>A $200.00 deposit will be held at the time of rental along with the quoted price.</p>
+				<p>The renter must present a Debit Card or Credit Card in their name at the time of rental we do not take pre-paid cards, cash, or checks. If the renter is presenting a debit card a credit check will be made. If using a Credit Card no credit report is nessasary.</p>
+				<i class="fa fa-cc-visa"></i>
+				<i class="fa fa-cc-mastercard"></i>
+				<i class="fa fa-cc-amex"></i>
+				<i class="fa fa-cc-diners-club"></i>
+			</div>
+			<img src="/static/rental/img/license.jpg">
+			<br>
+			<img src="/static/rental/img/noSmoking.jpeg">
+			<div class="charges">
+				<h2>Avoid Being Charged</h2>
+				<p>Absolutely no smoking in any of our vehicles as this causes us to pull the vehicle from our fleet and detail it. There is a $300.00 penalty if done.</p>
+				<p>We allow our renters to travel with their pets, however, if your pet (including service animals) leave excesive hair in our vehicle please ensure to clean up after them. There is a $300.00 charge for excessive pet hair. </p>
+			</div>
+			<div class="footer">
+				<a href="#" class="fa fa-facebook"></a>
+				<a href="#" class="fa fa-twitter"></a>
+				<i class="fa fa-yelp"></i>
+				<i class="fa fa-google-plus"></i>
+				<i class="fa fa-pinterest-p"></i>
+				<i class="fa fa-twitter"></i>
+			</div>
 		</div>
 	</body>
 </html>
