--- a/apps/rental/static/rental/css/requirements.css
+++ b/apps/rental/static/rental/css/requirements.css
@@ -1,18 +1,11 @@
 body {
-text-align: center;
 background-color: #d1b484;
 }
-h1 {
-margin:0;
-}
 .wrapper{
-height: auto;
-width: auto;
 padding-top: 20px;
-max-width: 800px;
-margin-right: auto;
-margin-left: auto;
 background-color: white;
+min-height: 600px;
+text-align: center;
 }
 /*=======================================================================================*/
 /* Add a black background color to the top navigation */
@@ -71,11 +64,45 @@ text-align: left;
 .fa {
 padding: 20px;
 font-size: 30px;
-width: 50px;
+width: 70px;
 text-align: center;
-text-decoration: none;
+margin:10px;
 }
 /* Add a hover effect if you want */
 .fa:hover {
 opacity: 0.7;
+}
+.fa-facebook {
+background: #3B5998;
+color: white;
+}
+.fa-twitter {
+background: #55ACEE;
+color: white;
+}
+.fa-yelp{
+color:red;
+}
+.reqs{
+
+padding: 70px;
+display: inline-block;
+width: 600px;
+margin: 0px 0px 20px 0px;
+}
+.charges{
+
+padding: 70px;
+display: inline-block;
+width: 600px;
+margin: 20px 0px 0px 0px;
+}
+img{
+display: inline-block;
+vertical-align: top;
+}
+.footer{
+
+padding: 15px;
+margin-top: 15px;
 }
