--- a/apps/rental/templates/rental/requirements.html
+++ b/apps/rental/templates/rental/requirements.html
@@ -19,8 +19,9 @@
 		<div class="topnav" id="myTopnav">
 			<a class="navbar-brand" class="active"><h3 class="navbar-brand" class="active">Welcome, {{ user.first_name }}!</h3></a>
 			<a href="{% url 'dashboard' %}"> Dashboard </a>
-			<a href="{% url 'locations' %}"> Our Locations </a>
+			<a href="{% url 'locations' %}"> Locations </a>
 			<a href="{% url 'add_res' %}"> Add Reservation </a>
+			<a href="{% url 'requirements' %}"> Rental Requirements </a>
 			<a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout </a>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
@@ -52,6 +53,5 @@
 				<i class="fa fa-pinterest-p"></i>
 				<i class="fa fa-twitter"></i>
 			</div>
-		</div>
-	</body>
-</html>
+		</body>
+	</html>
