--- a/apps/rental/templates/rental/index.html
+++ b/apps/rental/templates/rental/index.html
@@ -18,6 +18,7 @@
 	<body>
 		<div class="topnav" id="myTopnav">
 			<a class="navbar-brand" class="active"><h3 class="navbar-brand" class="active">Welcome, {{ user.first_name }}!</h3></a>
+			<a href="{% url 'dashboard' %}"> Dashboard </a>
 			<a href="{% url 'locations' %}"> Locations </a>
 			<a href="{% url 'add_res' %}"> Add Reservation </a>
 			<a href="{% url 'requirements' %}"> Rental Requirements </a>
@@ -59,10 +60,12 @@
 					
 				</div>
 				<div class="footer">
-					<p>this is the footer and the fa-fa icons</p>
 					<a href="#" class="fa fa-facebook"></a>
 					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-yelp"></a>
+					<i class="fa fa-yelp"></i>
+					<i class="fa fa-google-plus"></i>
+					<i class="fa fa-pinterest-p"></i>
+					<i class="fa fa-twitter"></i>
 				</div>
 			</div>
 		</body>
