added css to add.html

--- a/apps/rental/templates/rental/add.html
+++ b/apps/rental/templates/rental/add.html
@@ -30,7 +30,7 @@
 			<form class="add_res" method="post">
 				{% csrf_token %}
 				<div class="low">
-					<div class="field-wrap">
+					<div class="create">
 						<p>Select Vehicle: </p>
 						<select name="vehicle">
 							<option value="Compact">Compact</option>
@@ -131,7 +131,6 @@
 				<i class="fa fa-yelp"></i>
 				<i class="fa fa-google-plus"></i>
 				<i class="fa fa-pinterest-p"></i>
-				<i class="fa fa-twitter"></i>
 			</div>
 		</div>
 	</body>
