--- a/apps/rental/static/rental/css/index.css
+++ b/apps/rental/static/rental/css/index.css
@@ -1,18 +1,10 @@
-body {
-text-align: center;
-background-color: #d1b484;
-}
 h1 {
 margin:0;
 }
 .wrapper{
-height: auto;
-width: auto;
 padding-top: 20px;
-max-width: 800px;
-margin-right: auto;
-margin-left: auto;
 background-color: white;
+text-align: center;
 }
 table, td, th {
 border: 1px solid #ddd;
@@ -85,22 +77,26 @@ text-align: left;
 .fa {
 padding: 20px;
 font-size: 30px;
-width: 50px;
+width: 70px;
 text-align: center;
-text-decoration: none;
+margin:10px;
 }
 /* Add a hover effect if you want */
 .fa:hover {
 opacity: 0.7;
 }
-/* Set a specific color for each brand */
-/* Facebook */
 .fa-facebook {
 background: #3B5998;
 color: white;
 }
-/* Twitter */
 .fa-twitter {
 background: #55ACEE;
 color: white;
+}
+.fa-yelp{
+color:red;
+}
+.footer{
+padding: 15px;
+margin-top: 15px;
 }
