--- a/apps/rental/static/rental/css/locations.css
+++ b/apps/rental/static/rental/css/locations.css
@@ -1,18 +1,10 @@
-body {
-text-align: center;
-background-color: #d1b484;
-}
 h1 {
 margin:0;
 }
 .wrapper{
-height: auto;
-width: auto;
 padding-top: 20px;
-max-width: 800px;
-margin-right: auto;
-margin-left: auto;
 background-color: white;
+text-align: center;
 }
 /*=======================================================================================*/
 /* Add a black background color to the top navigation */
@@ -67,3 +59,30 @@ text-align: left;
 }
 }
 /*==================================================================================*/
+/* Style all font awesome icons */
+.fa {
+padding: 20px;
+font-size: 30px;
+width: 70px;
+text-align: center;
+margin:10px;
+}
+/* Add a hover effect if you want */
+.fa:hover {
+opacity: 0.7;
+}
+.fa-facebook {
+background: #3B5998;
+color: white;
+}
+.fa-twitter {
+background: #55ACEE;
+color: white;
+}
+.fa-yelp{
+color:red;
+}
+.footer{
+padding: 15px;
+margin-top: 15px;
+}
